@@ -1,5 +1,9 @@
 2005-12-19  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
+	* libgdict/Makefile.am: fix stamp_files build
+
+2005-12-19  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
 	* libgdict/gdict-defbox.c (create_find_pane): another shot at getting
 	the find pane layout right (closes bug #324342).
 
